[project]
name = "pybuildkite"
version = "1.2.4"
description = "Python wrapper for the Buildkite API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Peter Yasi" },
]
keywords = [
    "Buildkite",
    "Continuous Integration",
    "API",
    "CI",
    "wrapper",
    "python",
]

dependencies = ["requests==2.32.0"]

[project.optional-dependencies]
dev = [
    "black==22.6.0",
    "coveralls==3.3.1",
    "mypy==1.3.0",
    "pytest==7.3.2",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/pyasi/pybuildkite"
Repository = "https://github.com/pyasi/pybuildkite.git"
Download = "https://github.com/pyasi/pybuildkite/archive/master.zip"

[tool.mypy]
ignore_missing_imports = true
disallow_any_unimported = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
addopts = """
--verbose \
--cov=pybuildkite \
--cov-report=xml"""
python_files = ["tests/*.py"]
